--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "romacloud1989/ecommerce",
     "authors": [
         {
-            "name": "Hcode Treinamentos",
+            "name": "Romário Cunha",
             "email": "romacloud3@gmail.com"
         }
     ],
